--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "@inertiajs/progress": "^0.2.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "@tailwindcss/forms": "^0.4.0",
         "@vitejs/plugin-react": "^1.3.2",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "10.4.5",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "laravel-vite-plugin": "^0.5.3",
